@@ -1,47 +1,34 @@
-package de.cxp.ocs.smartsuggest.querysuggester;
+package de.cxp.ocs.smartsuggest.querysuggester.lucene;
 
-import static de.cxp.ocs.smartsuggest.querysuggester.lucene.LuceneQuerySuggester.BEST_MATCHES_GROUP_NAME;
-import static de.cxp.ocs.smartsuggest.querysuggester.lucene.LuceneQuerySuggester.FUZZY_MATCHES_ONE_EDIT_GROUP_NAME;
-import static de.cxp.ocs.smartsuggest.querysuggester.lucene.LuceneQuerySuggester.FUZZY_MATCHES_TWO_EDITS_GROUP_NAME;
-import static de.cxp.ocs.smartsuggest.querysuggester.lucene.LuceneQuerySuggester.PAYLOAD_GROUPMATCH_KEY;
-import static de.cxp.ocs.smartsuggest.querysuggester.lucene.LuceneQuerySuggester.RELAXED_GROUP_NAME;
-import static de.cxp.ocs.smartsuggest.querysuggester.lucene.LuceneQuerySuggester.SHINGLE_MATCHES_GROUP_NAME;
-import static de.cxp.ocs.smartsuggest.querysuggester.lucene.LuceneQuerySuggester.TYPO_MATCHES_GROUP_NAME;
-import static java.util.Arrays.asList;
-import static java.util.Collections.emptyMap;
-import static java.util.Collections.emptySet;
-import static java.util.Collections.singletonList;
-import static java.util.Collections.singletonMap;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.mock;
-
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.nio.file.Path;
-import java.util.*;
-
-import org.apache.commons.lang3.StringUtils;
-import org.apache.lucene.analysis.CharArraySet;
-import org.apache.lucene.analysis.WordlistLoader;
-import org.junit.jupiter.api.*;
-import org.junit.jupiter.api.io.TempDir;
-
-import de.cxp.ocs.smartsuggest.querysuggester.lucene.LuceneQuerySuggester;
+import de.cxp.ocs.smartsuggest.querysuggester.Suggestion;
 import de.cxp.ocs.smartsuggest.querysuggester.modified.ModifiedTermsService;
 import de.cxp.ocs.smartsuggest.spi.SuggestConfig;
 import de.cxp.ocs.smartsuggest.spi.SuggestConfig.SortStrategy;
 import de.cxp.ocs.smartsuggest.spi.SuggestRecord;
 import lombok.extern.slf4j.Slf4j;
+import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.io.TempDir;
 
-@SuppressWarnings("deprecation")
+import java.io.IOException;
+import java.nio.file.Path;
+import java.util.*;
+
+import static de.cxp.ocs.smartsuggest.querysuggester.lucene.LuceneQuerySuggester.*;
+import static de.cxp.ocs.smartsuggest.spi.CommonPayloadFields.PAYLOAD_GROUPMATCH_KEY;
+import static de.cxp.ocs.smartsuggest.util.TestSetupUtil.asSuggestRecord;
+import static de.cxp.ocs.smartsuggest.util.TestSetupUtil.getWordSet;
+import static java.util.Arrays.asList;
+import static java.util.Collections.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.mock;
+
 @Slf4j
 class LuceneQuerySuggesterTest {
 
-	private LuceneQuerySuggester	underTest;
-	private ModifiedTermsService	modifiedTermsService	= mock(ModifiedTermsService.class);
-	private SuggestConfig			suggestConfig;
+	private       LuceneQuerySuggester underTest;
+	private final ModifiedTermsService modifiedTermsService = mock(ModifiedTermsService.class);
+	private       SuggestConfig        suggestConfig;
 
 	@BeforeEach
 	void beforeEach(@TempDir Path indexFolder) throws IOException {
@@ -54,8 +41,7 @@ class LuceneQuerySuggesterTest {
 
 	@AfterEach
 	void close() throws Exception {
-		if (underTest != null)
-		underTest.close();
+		if (underTest != null) underTest.close();
 	}
 
 	@DisplayName("Search for 'user' should return the best matches for both 'user query 1' and 'user query 2', sorted by the weight")
@@ -69,7 +55,7 @@ class LuceneQuerySuggesterTest {
 				asSuggestRecord("user query 2", masterQuery2, 101),
 				asSuggestRecord("u 2", masterQuery2, 101)));
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		List<Suggestion> results = underTest.suggest("user");
 
@@ -90,13 +76,13 @@ class LuceneQuerySuggesterTest {
 				asSuggestRecord("user query 2", masterQuery1, 101),
 				asSuggestRecord("u 2", masterQuery2, 101)));
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		List<Suggestion> results = underTest.suggest("user");
 
 		assertThat(results).hasSize(1);
-		assertGroupName(results.get(0), TYPO_MATCHES_GROUP_NAME);
-		assertLabel(results.get(0), masterQuery1);
+		assertGroupName(results.getFirst(), TYPO_MATCHES_GROUP_NAME);
+		assertLabel(results.getFirst(), masterQuery1);
 	}
 
 	@DisplayName("Search for 'u' should return the best matches for all suggestions, sorted by the weight")
@@ -112,7 +98,7 @@ class LuceneQuerySuggesterTest {
 				asSuggestRecord("user query 3", masterQuery3, 101),
 				asSuggestRecord("u 4", masterQuery4, 99)));
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		List<Suggestion> results = underTest.suggest("u");
 
@@ -131,11 +117,11 @@ class LuceneQuerySuggesterTest {
 		List<SuggestRecord> toIndex = new ArrayList<>(singletonList(
 				asSuggestRecord("gucci", Gucci, 1000)));
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		List<Suggestion> results = underTest.suggest("guci");
 		assertThat(results).hasSize(1);
-		assertSuggestion(results.get(0), Gucci, FUZZY_MATCHES_ONE_EDIT_GROUP_NAME);
+		assertSuggestion(results.getFirst(), Gucci, FUZZY_MATCHES_ONE_EDIT_GROUP_NAME);
 
 	}
 
@@ -146,11 +132,11 @@ class LuceneQuerySuggesterTest {
 		List<SuggestRecord> toIndex = new ArrayList<>(singletonList(
 				asSuggestRecord("washington", Washington, 1000)));
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		List<Suggestion> results = underTest.suggest("veshin");
 		assertThat(results).hasSize(1);
-		assertSuggestion(results.get(0), Washington, FUZZY_MATCHES_TWO_EDITS_GROUP_NAME);
+		assertSuggestion(results.getFirst(), Washington, FUZZY_MATCHES_TWO_EDITS_GROUP_NAME);
 	}
 
 	@DisplayName("Search for 'shirt' should return all unique best matches with 'shirt'")
@@ -163,7 +149,7 @@ class LuceneQuerySuggesterTest {
 				asSuggestRecord("women shirt", womensShirts, 99),
 				asSuggestRecord("shirt", mensShirts, 1000)));
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		List<Suggestion> results = underTest.suggest("shirt");
 		assertThat(results).hasSize(2);
@@ -182,7 +168,7 @@ class LuceneQuerySuggesterTest {
 				asSuggestRecord(womensShirts, setOf("women's shirt"), 101),
 				asSuggestRecord(withoutSMensShirts, setOf("men shirt"), 1000)));
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		// with apostrophe
 		List<Suggestion> results = underTest.suggest("men's");
@@ -218,7 +204,7 @@ class LuceneQuerySuggesterTest {
 				asSuggestRecord(Renew, Renew, 100),
 				asSuggestRecord(Newton, Newton, 101)));
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		List<Suggestion> results = underTest.suggest("new");
 		assertSuggestion(results.get(0), NewYork, BEST_MATCHES_GROUP_NAME);
@@ -236,10 +222,10 @@ class LuceneQuerySuggesterTest {
 				asSuggestRecord("name 2", Movie2, 100, setOf("movie")),
 				asSuggestRecord("name 3", Book1, 102, setOf("book"))));
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		List<Suggestion> bookResults = underTest.suggest("name", 10, setOf("book"));
-		assertSuggestion(bookResults.get(0), Book1, TYPO_MATCHES_GROUP_NAME);
+		assertSuggestion(bookResults.getFirst(), Book1, TYPO_MATCHES_GROUP_NAME);
 
 		List<Suggestion> movieResults = underTest.suggest("name", 10, setOf("movie"));
 		assertSuggestion(movieResults.get(0), Movie1, TYPO_MATCHES_GROUP_NAME);
@@ -266,7 +252,7 @@ class LuceneQuerySuggesterTest {
 				asSuggestRecord(WorkShirts, setOf("work shirts"), 103),
 				asSuggestRecord(Shirts, setOf("shirts"), 104)));
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		List<Suggestion> results = underTest.suggest("beige men's shirts");
 		assertSuggestion(results.get(0), BeigeMensShirts, BEST_MATCHES_GROUP_NAME);
@@ -296,7 +282,7 @@ class LuceneQuerySuggesterTest {
 				asSuggestRecord("work shirts", WorkShirts, 100),
 				asSuggestRecord("shirts", Shirts, 100)));
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		List<Suggestion> results = underTest.suggest("men's shi");
 
@@ -326,7 +312,7 @@ class LuceneQuerySuggesterTest {
 		final String sportSchuheMaster = "sport schuhe";
 		final String schuheForChindrenMaster = "schuhe für kinder";
 		final String damenSommerSchuheMaster = "damen sommerschuhe";
-		final String weißeSchuheMaster = "weiße schuhe";
+		final String weisseSchuheMaster = "weiße schuhe";
 		List<SuggestRecord> toIndex = new ArrayList<>(asList(
 				asSuggestRecord("sport schuhe", sportSchuheMaster, 226000),
 				asSuggestRecord("sportschue", sportSchuheMaster, 226000),
@@ -358,22 +344,22 @@ class LuceneQuerySuggesterTest {
 				asSuggestRecord("damen somerschue", damenSommerSchuheMaster, 3400),
 				asSuggestRecord("damen sommer shuhe", damenSommerSchuheMaster, 3400),
 
-				asSuggestRecord("weiße schuhe", weißeSchuheMaster, 6600),
-				asSuggestRecord("weise schuhe", weißeSchuheMaster, 6600),
-				asSuggestRecord("weise schue", weißeSchuheMaster, 6600)));
+				asSuggestRecord("weiße schuhe", weisseSchuheMaster, 6600),
+				asSuggestRecord("weise schuhe", weisseSchuheMaster, 6600),
+				asSuggestRecord("weise schue", weisseSchuheMaster, 6600)));
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		List<Suggestion> results = underTest.suggest("schuhe");
 
 		assertThat(results).hasSize(3);
-		final Suggestion result = results.get(0);
+		final Suggestion result = results.getFirst();
 		assertGroupName(result, BEST_MATCHES_GROUP_NAME);
 		// not expecting "damenschuhe" since there is not a single variant that
 		// starts with "schuhe"
 		assertThat(results).hasSize(3);
 		assertLabel(results.get(0), sportSchuheMaster);
-		assertLabel(results.get(1), weißeSchuheMaster);
+		assertLabel(results.get(1), weisseSchuheMaster);
 		assertLabel(results.get(2), schuheForChindrenMaster);
 	}
 
@@ -381,30 +367,30 @@ class LuceneQuerySuggesterTest {
 	@Test
 	void suggest4() {
 
-		final String weißeSommerhoseMaster = "weiße sommerhose";
-		final String weißeSchuheMaster = "weiße schuhe";
-		final String weißeSneakerMaster = "weiße sneaker";
-		final String weißeSockenMaster = "weiße socken";
-		final String weißeSpitzenbluseMaster = "weiße spitzenbluse";
-		final String weißeStoffhoseMaster = "weiße stoffhose";
+		final String weisseSommerhoseMaster = "weiße sommerhose";
+		final String weisseSchuheMaster = "weiße schuhe";
+		final String weisseSneakerMaster = "weiße sneaker";
+		final String weisseSockenMaster = "weiße socken";
+		final String weisseSpitzenbluseMaster = "weiße spitzenbluse";
+		final String weisseStoffhoseMaster = "weiße stoffhose";
 		final String weisseStrickjackeMaster = "weisse strickjacke";
 		final String weisseShortsMaster = "weisse shorts";
-		final String weißesSpitzenkleidMaster = "weißes spitzenkleid";
-		final String weißeTshirtsDamenMaster = "weiße tshirts damen";
-		final String weißesSommerkleidMaster = "weißes sommerkleid";
+		final String weissesSpitzenkleidMaster = "weißes spitzenkleid";
+		final String weisseTshirtsDamenMaster = "weiße tshirts damen";
+		final String weissesSommerkleidMaster = "weißes sommerkleid";
 		final String weissesHemdMaster = "weisses hemd";
-		final String tShirtWeißMaster = "t shirt weiß";
+		final String tShirtWeissMaster = "t shirt weiß";
 		
-		List<SuggestRecord> toIndex = new ArrayList<SuggestRecord>(asList(
-				asSuggestRecord(weißeSommerhoseMaster, setOf("weisse sommerhose", "weisse sommerhosse"), 3400),
-				asSuggestRecord(weißeSchuheMaster, setOf("weise schue", "weiße schuhe", "weise schuhe"), 6600),
-				asSuggestRecord(weißeSneakerMaster, setOf("weise sneaker", "weise sneakers", "weisse sneaker", "weiße sneakers"), 0),
-				asSuggestRecord(weißeSockenMaster,
+		List<SuggestRecord> toIndex = new ArrayList<>(asList(
+				asSuggestRecord(weisseSommerhoseMaster, setOf("weisse sommerhose", "weisse sommerhosse"), 3400),
+				asSuggestRecord(weisseSchuheMaster, setOf("weise schue", "weiße schuhe", "weise schuhe"), 6600),
+				asSuggestRecord(weisseSneakerMaster, setOf("weise sneaker", "weise sneakers", "weisse sneaker", "weiße sneakers"), 0),
+				asSuggestRecord(weisseSockenMaster,
 						setOf("weise socken", "weisse socken.", "weissem socken", "weiße socke", "weißer socken", "weißes socken"),
 						6600),
-				asSuggestRecord(weißeSpitzenbluseMaster,
+				asSuggestRecord(weisseSpitzenbluseMaster,
 						setOf("weise spitzenbluse", "weisse spitzenbluse", "weiße spitzen blusen", "weiße spitzenblus"), 0),
-				asSuggestRecord(weißeStoffhoseMaster, setOf("weiße stoffhosen", "weisse stoffhose", "weisse stoffhosen", "weiße stoff hosen"),
+				asSuggestRecord(weisseStoffhoseMaster, setOf("weiße stoffhosen", "weisse stoffhose", "weisse stoffhosen", "weiße stoff hosen"),
 						1800),
 				asSuggestRecord(weisseStrickjackeMaster,
 						setOf("weisse strickjacke", "weise strickjacke", "weiße strickjacken", "weisestrickjacke", "weisse strick jacke",
@@ -414,14 +400,14 @@ class LuceneQuerySuggesterTest {
 						setOf("weisse shorts", "weiße short", "weisse short", "weiße short,", "weißer shortst", "weise short,", "weiße shorts.",
 								"weiße tshorts"),
 						19408),
-				asSuggestRecord(weißesSpitzenkleidMaster,
+				asSuggestRecord(weissesSpitzenkleidMaster,
 						setOf("weißes spitzen kleid", "weiss es spitzenkleid", "weisse spitzenkleid", "weisses spitzenkleid", "weißes  spitzenkleid"),
 						1800),
-				asSuggestRecord(weißeTshirtsDamenMaster,
+				asSuggestRecord(weisseTshirtsDamenMaster,
 						setOf("weiße t-shirts damen", "weisse shirts damen", "weiße t shirts damen", "weise shirts damen", "weise t shirts damen",
 								"weisse t shirts damen", "weiße shirts damen", "weiße tshirts  damen"),
 						6600),
-				asSuggestRecord(weißesSommerkleidMaster,
+				asSuggestRecord(weissesSommerkleidMaster,
 						setOf("weißes sommerkleid", "weiße sommerkleider", "weise sommer kleid", "weises sommerkleid", "weiße sommer kleider",
 								"weißes sommer kleid", "weisse sommerkleid", "weisses  sommerkleid", "weißes  sommerkleid", "weißes sommerkleider"),
 						14599),
@@ -433,12 +419,12 @@ class LuceneQuerySuggesterTest {
 								"weiss  hemd", "weisse hemde", "weisse shemd", "weisses  hemd", "weisses <hemd", "weisße hemd", "weiße hemd s",
 								"weiße hemdchen", "weißen hemd", "weißes hemd s", "weißes hemde", "weißhemd"),
 						500418),
-				asSuggestRecord(tShirtWeißMaster, setOf("weiße shirts", "weisse shirt", "weisse shirts"), 851928)
+				asSuggestRecord(tShirtWeissMaster, setOf("weiße shirts", "weisse shirt", "weisse shirts"), 851928)
 		));
 		// sort like the LuceneSuggesterFactory does it
-		Collections.sort((List<SuggestRecord>) toIndex, Comparator.comparingDouble(SuggestRecord::getWeight).reversed());
+		toIndex.sort(Comparator.comparingDouble(SuggestRecord::getWeight).reversed());
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		List<Suggestion> results = underTest.suggest("weisse s", 20, Collections.emptySet());
 
@@ -453,21 +439,21 @@ class LuceneQuerySuggesterTest {
 		// suggestions with the same score are returned based on the better exact match position:
 		// weißeSocken contains a variant with ss (as searched in the query)
 		// weißeSchuhe does not contain a variant with ss, so it has a worse position although indexed first
-		assertLabel(results.get(2), weißeSockenMaster);
-		assertLabel(results.get(3), weißeSchuheMaster);
+		assertLabel(results.get(2), weisseSockenMaster);
+		assertLabel(results.get(3), weisseSchuheMaster);
 
-		assertLabel(results.get(4), weißeSommerhoseMaster);
-		assertLabel(results.get(5), weißeStoffhoseMaster);
-		assertLabel(results.get(6), weißeSpitzenbluseMaster);
-		assertLabel(results.get(7), weißeSneakerMaster);
+		assertLabel(results.get(4), weisseSommerhoseMaster);
+		assertLabel(results.get(5), weisseStoffhoseMaster);
+		assertLabel(results.get(6), weisseSpitzenbluseMaster);
+		assertLabel(results.get(7), weisseSneakerMaster);
 
 		assertGroupName(results.get(8), LuceneQuerySuggester.TYPO_MATCHES_GROUP_NAME);
 		assertGroupName(results.get(12), LuceneQuerySuggester.TYPO_MATCHES_GROUP_NAME);
-		assertLabel(results.get(8), tShirtWeißMaster);
+		assertLabel(results.get(8), tShirtWeissMaster);
 		assertLabel(results.get(9), weissesHemdMaster);
-		assertLabel(results.get(10), weißesSommerkleidMaster);
-		assertLabel(results.get(11), weißeTshirtsDamenMaster);
-		assertLabel(results.get(12), weißesSpitzenkleidMaster);
+		assertLabel(results.get(10), weissesSommerkleidMaster);
+		assertLabel(results.get(11), weisseTshirtsDamenMaster);
+		assertLabel(results.get(12), weissesSpitzenkleidMaster);
 	}
 
 	@DisplayName("Ignore stopwords (like `früher`) for German locale")
@@ -487,13 +473,13 @@ class LuceneQuerySuggesterTest {
 				asSuggestRecord("schuh für kinder", schuheForKinderMaster, 3400),
 				asSuggestRecord("schuhe  für kinder", schuheForKinderMaster, 3400)));
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		// `für` is not a stopword so there are results for it
 		List<Suggestion> results = underTest.suggest("für");
 		assertThat(results).hasSize(1);
-		assertGroupName(results.get(0), BEST_MATCHES_GROUP_NAME);
-		assertLabel(results.get(0), schuheForKinderMaster);
+		assertGroupName(results.getFirst(), BEST_MATCHES_GROUP_NAME);
+		assertLabel(results.getFirst(), schuheForKinderMaster);
 
 		{
 			// `früher` is a stopword so there are no results for it
@@ -521,7 +507,7 @@ class LuceneQuerySuggesterTest {
 				asSuggestRecord("fff", hoseMaster, 3),
 				asSuggestRecord("ggg", hemdMaster, 2)));
 
-		underTest.index(toIndex).join();
+		underTest.index(toIndex, System.currentTimeMillis()).join();
 
 		List<Suggestion> results = underTest.suggest("hmd");
 
@@ -550,7 +536,6 @@ class LuceneQuerySuggesterTest {
 				getWordSet(Locale.GERMAN));
 
 		// nothing is indexed
-
 		{
 			suggestConfig.setMaxSharpenedQueries(3);
 			List<Suggestion> results = underTest.suggest("fleece");
@@ -565,7 +550,7 @@ class LuceneQuerySuggesterTest {
 		for (Suggestion result : results) {
 			assertTrue(expectedLabels.remove(result.getLabel()), "label '" + result.getLabel() + "' found, but was not expected");
 		}
-		assertTrue(expectedLabels.isEmpty(), "Some expected labels were not found: " + expectedLabels.toString());
+		assertTrue(expectedLabels.isEmpty(), "Some expected labels were not found: " + expectedLabels);
 	}
 
 	@DisplayName("Search for `fleeceanzug` should return relaxed results")
@@ -579,7 +564,7 @@ class LuceneQuerySuggesterTest {
 
 		List<Suggestion> results = underTest.suggest("fleeceanzug");
 		assertThat(results).hasSize(1);
-		assertSuggestion(results.get(0), "fleece", RELAXED_GROUP_NAME);
+		assertSuggestion(results.getFirst(), "fleece", RELAXED_GROUP_NAME);
 	}
 
 	@DisplayName("Destroyed Suggester returns empty result")
@@ -587,7 +572,7 @@ class LuceneQuerySuggesterTest {
 	void destroyedSuggesterReturnsEmptyResult() throws Exception {
 		List<SuggestRecord> suggestions = new ArrayList<>();
 		suggestions.add(asSuggestRecord("fnord", "", 1));
-		underTest.index(suggestions).join();
+		underTest.index(suggestions, System.currentTimeMillis()).join();
 
 		assertThat(underTest.suggest("fno")).hasSize(1);
 
@@ -612,7 +597,7 @@ class LuceneQuerySuggesterTest {
 					asSuggestRecord("shiney", primary2, 20), // <<sh matches secondary
 					asSuggestRecord("sustainable", primary3, 30)));
 
-			underTest.index(toIndex).join();
+			underTest.index(toIndex, System.currentTimeMillis()).join();
 
 			List<Suggestion> results = underTest.suggest("sh");
 			System.out.println(results);
@@ -633,7 +618,7 @@ class LuceneQuerySuggesterTest {
 	}
 
 	private void assertGroupName(Suggestion suggestion, String expectedGroupName) {
-		assertThat(suggestion.getPayload().get(LuceneQuerySuggester.PAYLOAD_GROUPMATCH_KEY)).isEqualTo(expectedGroupName);
+		assertThat(suggestion.getPayload().get(PAYLOAD_GROUPMATCH_KEY)).isEqualTo(expectedGroupName);
 	}
 
 	private void assertSuggestion(Suggestion suggestion, String expectedLabel, String expectedGroupName) {
@@ -641,70 +626,8 @@ class LuceneQuerySuggesterTest {
 		assertGroupName(suggestion, expectedGroupName);
 	}
 
-	private SuggestRecord asSuggestRecord(String bestQuery, Set<String> searchData, int weight) {
-		return new SuggestRecord(bestQuery, StringUtils.join(searchData, " "), singletonMap("label", bestQuery), emptySet(), weight);
-	}
-	
-	private SuggestRecord asSuggestRecord(String searchString, String bestQuery, int weight) {
-		return new SuggestRecord(bestQuery, searchString, singletonMap("label", bestQuery), emptySet(), weight);
-	}
-
-	private SuggestRecord asSuggestRecord(String searchString, String bestQuery, int weight, Set<String> tags) {
-		return new SuggestRecord(bestQuery, searchString, singletonMap("label", bestQuery), tags, weight);
-	}
-
 	private Set<String> setOf(String... entries) {
-		Set<String> result = new HashSet<>(asList(entries));
-		return result;
-	}
-
-	private CharArraySet getWordSet(Locale locale) throws IOException {
-		if (locale != null) {
-			final String languageCode = locale.getLanguage();
-			String stopWordsFileName = null;
-			switch (languageCode) {
-				case "de":
-					stopWordsFileName = "de.txt";
-					break;
-				default:
-					log.info("No stopwords file for locale '{}'", locale);
-			}
-
-			if (stopWordsFileName != null) {
-				final InputStream stopWordInputStream = LuceneQuerySuggester.class.getResourceAsStream("/stopwords/" + stopWordsFileName);
-				final CharArraySet stopWordSet = WordlistLoader.getWordSet(new InputStreamReader(stopWordInputStream));
-				return stopWordSet;
-			}
-		}
-
-		return null;
-	}
-
-	/**
-	 * minimal suggestion that only compares label and groupname
-	 *
-	 */
-	static class AssertSuggestion extends Suggestion {
-
-		AssertSuggestion(String label, String groupName) {
-			super(label);
-			this.setPayload(Collections.singletonMap(PAYLOAD_GROUPMATCH_KEY, groupName));
-		}
-
-		@Override
-		public boolean equals(Object obj) {
-			System.out.println("using equals");
-			if (!(obj instanceof Suggestion)) return false;
-			Suggestion other = (Suggestion)obj;
-			return this.getLabel().equals(other.getLabel())
-					&& this.getPayload().get(PAYLOAD_GROUPMATCH_KEY).equals(other.getPayload().get(PAYLOAD_GROUPMATCH_KEY));
-		}
-
-		@Override
-		public int hashCode() {
-			System.out.println("using hashcode");
-			return super.hashCode();
-		}
+		return new HashSet<>(asList(entries));
 	}
 
 }
